--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/btnSignIn"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -19,6 +19,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edtInputName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Name"
@@ -40,6 +41,7 @@
         app:layout_constraintTop_toBottomOf="@+id/txtInputName">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edtInputLastName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Last Name"
@@ -66,6 +68,7 @@
         app:layout_constraintTop_toBottomOf="@+id/txtInputLastName">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edtInputPhoneNumber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Phone Number"
@@ -82,10 +85,11 @@
         app:layout_constraintTop_toBottomOf="@+id/txtInputPhone">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edtInputEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Email address"
-            android:inputType="textWebEmailAddress|text|textEmailAddress" />
+            android:inputType="textEmailAddress" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -99,6 +103,7 @@
         app:passwordToggleEnabled="true">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edtInputPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Password"
