--- a/app/src/main/res/layout/activity_restaurant_details.xml
+++ b/app/src/main/res/layout/activity_restaurant_details.xml
@@ -2,7 +2,6 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -37,21 +36,25 @@
                     android:scaleType="centerCrop"
                     android:src="@android:drawable/sym_def_app_icon" />
 
+                <TextView
+                    android:id="@+id/restaurantDetailName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_gravity="bottom"
+                    android:background="#4f0e0d0e"
+                    android:gravity="center"
+                    android:textColor="@android:color/white"
+                    android:textSize="20sp"
+                    android:textStyle="italic" />
+
                 <androidx.appcompat.widget.Toolbar
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
                     app:layout_collapseMode="parallax"
-
                     app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
-                    <ImageButton
-                        android:id="@+id/userButton"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-
-
-                        android:src="@drawable/ic_account_circle_black_24dp" />
 
                 </androidx.appcompat.widget.Toolbar>
 
