--- a/app/src/main/res/layout/date_time_picker_layout.xml
+++ b/app/src/main/res/layout/date_time_picker_layout.xml
@@ -3,7 +3,6 @@
 
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -26,6 +25,7 @@
             app:textSize="10sp" />
 
         <TextView
+            android:id="@+id/txtPerson"
             android:layout_width="wrap_content"
             android:layout_height="45dp"
             android:layout_marginStart="8dp"
@@ -62,7 +62,7 @@
             app:layout_constraintTop_toBottomOf="@+id/datePicker" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/btnSetReservation"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
