--- a/app/src/main/res/layout/fragment_reserve.xml
+++ b/app/src/main/res/layout/fragment_reserve.xml
@@ -14,11 +14,44 @@
         android:orientation="vertical"
         android:padding="10dp">
 
-        <Spinner
+        <Button
+            android:id="@+id/btnReserve"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:elevation="10dp"
-            android:padding="10dp" />
+            android:background="@android:color/transparent"
+            android:padding="10dp"
+            android:text="RESERVE"
+            android:textColor="@android:color/black" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/layoutReservation_time"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="33.33"
+                android:visibility="gone">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/edtReservation_time"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <Button
+                android:id="@+id/btnConfirm"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Confirm"
+                android:visibility="gone" />
+
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -100,6 +133,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
+
             android:text="Monday-Friday: 11:00am-3:00pm" />
 
         <TextView
