--- a/app/src/main/res/menu/standard_menu.xml
+++ b/app/src/main/res/menu/standard_menu.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
+
+    <item
+        android:id="@+id/btnUserProfile"
+        android:icon="@drawable/ic_person_black_24dp"
+        android:title="User"
+        app:showAsAction="always" />
 </menu>
